compiler/tests/fail/array_expansion/x86-64/default_scale_param_2.jazz
fn f (reg u64[2] r) -> reg u64[2] {
  return r;
}

export fn main () -> reg u64 {
  reg u64[2] z k;
  z[0] = 0; z[1] = 1;
  k = f(z[:u32 0:4]); // we do not use the default scale for z
  reg u64 res = k[0];
  return res;
}
